fixed scrollbar appearing and disappearing

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  overflow: hidden;
+}
+
 .App {
   height: 100vh;
   background-color: black;
@@ -25,10 +29,6 @@
 
 .hidden {
   display: none;
-}
-
-.webcam-feed {
-  display:
 }
 
 @keyframes loading-spinner-spin {
